--- a/webroot/css/common.css
+++ b/webroot/css/common.css
@@ -99,7 +99,7 @@
     width: auto;
 }
 .page-header.navbar{
-    background-color:#474f72!important;
+    background-color:#3472A7!important;
 }
 .page-header{
     -webkit-box-shadow: 0px 2px 3px 0px rgba(107,119,143,1);
